# nid

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/nid-cli/: Cargo.toml
crates/nid-cli/src/: main.rs
crates/nid-cli/src/cmd/: doctor.rs  gain.rs  gc.rs  hook.rs  mod.rs  onboard.rs  paths.rs  profiles.rs  run.rs  sessions.rs  shadow.rs  show.rs  synthesize.rs  trust.rs  update.rs  version.rs
crates/nid-cli/tests/: e2e.rs  release_tarball.rs  show_sealed.rs
crates/nid-core/: Cargo.toml
crates/nid-core/src/: compressor.rs  context.rs  fingerprint.rs  lib.rs  redact.rs  sealed.rs  session.rs  signing.rs
crates/nid-core/src/layers/: layer1.rs  layer2.rs  mod.rs
crates/nid-core/tests/: redaction_coverage.rs
crates/nid-dsl/: Cargo.toml
crates/nid-dsl/src/: ast.rs  budget.rs  diff.rs  interpreter.rs  invariants.rs  lib.rs  nidprofile.rs  validator.rs
crates/nid-dsl/tests/: budget.rs  forbidden.rs
crates/nid-fidelity/: Cargo.toml
crates/nid-fidelity/src/: bypass.rs  exit_skew.rs  lib.rs  structural.rs
crates/nid-hooks/: Cargo.toml
crates/nid-hooks/src/: agents.rs  detect.rs  installer.rs  lib.rs  onboard.rs  rewrite.rs
crates/nid-hooks/tests/: agents.rs  attestation.rs  uninstall_roundtrip.rs
crates/nid-profiles/: Cargo.toml  build.rs
crates/nid-profiles/src/: lib.rs
crates/nid-profiles/tests/: compression_ratios.rs  golden_all.rs  golden_git_status.rs
crates/nid-storage/: Cargo.toml
crates/nid-storage/src/: agent_registry_repo.rs  blob.rs  config.rs  db.rs  fidelity_repo.rs  lib.rs  migrations.rs  paths.rs  profile_repo.rs  sample_repo.rs  session_repo.rs  trust_repo.rs
crates/nid-storage/src/sql/: 001_initial.sql
crates/nid-synthesis/: Cargo.toml
crates/nid-synthesis/src/: backend.rs  lib.rs  lockin.rs  orchestrator.rs
crates/nid-synthesis/src/backends/: anthropic.rs  claude_cli.rs  mod.rs  ollama.rs
crates/nid-synthesis/tests/: end_to_end.rs
docs/: dsl-reference.md  v1-architecture.md
profiles/: aws_s3_ls.toml  az_webapp_log_tail.toml  cargo_build.toml  cargo_test.toml  docker_ps.toml  eslint.toml  gh_pr_list.toml  git_branch.toml  git_diff.toml  git_log.toml  git_status.toml  go_test.toml  jq_dot.toml  kubectl_get_pods.toml  make.toml  mypy.toml  npm_install.toml  psql.toml  pytest.toml  ruff.toml  terraform_plan.toml  tsc.toml
tests/fixtures/aws_s3_ls/: raw.txt
tests/fixtures/az_webapp_log_tail/: profile_fingerprint.txt  raw.txt
tests/fixtures/cargo_build/: expected.txt  raw.txt
tests/fixtures/cargo_test/: expected.txt  raw.txt
tests/fixtures/docker_ps/: raw.txt
tests/fixtures/eslint/: expected.txt  raw.txt
tests/fixtures/gh_pr_list/: expected.txt  raw.txt
tests/fixtures/git_branch/: expected.txt  raw.txt
tests/fixtures/git_diff/: expected.txt  raw.txt
tests/fixtures/git_log/: expected.txt  raw.txt
tests/fixtures/git_status/: expected.txt  raw.txt
tests/fixtures/go_test/: expected.txt  raw.txt
tests/fixtures/jq_dot/: profile_fingerprint.txt  raw.txt
tests/fixtures/kubectl_get_pods/: expected.txt  raw.txt
tests/fixtures/make/: expected.txt  raw.txt
tests/fixtures/mypy/: expected.txt  profile_fingerprint.txt  raw.txt
tests/fixtures/npm_install/: expected.txt  raw.txt
tests/fixtures/psql/: expected.txt  raw.txt
tests/fixtures/pytest/: expected.txt  raw.txt
tests/fixtures/ruff/: profile_fingerprint.txt  raw.txt
tests/fixtures/terraform_plan/: expected.txt  raw.txt
tests/fixtures/tsc/: expected.txt  raw.txt
