[workspace]
resolver = "2"
members = [
    "crates/nid-cli",
    "crates/nid-core",
    "crates/nid-dsl",
    "crates/nid-storage",
    "crates/nid-hooks",
    "crates/nid-fidelity",
    "crates/nid-synthesis",
    "crates/nid-profiles",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/newtro/nid"
homepage = "https://github.com/newtro/nid"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["rt", "macros", "process", "signal", "io-util", "fs", "time", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
aes-gcm = "0.10"
zstd = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
similar = "2"
nix = { version = "0.29", features = ["signal", "process"] }
ignore = "0.4"
tempfile = "3"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
tar = "0.4"

# Internal crates
nid-core = { path = "crates/nid-core" }
nid-dsl = { path = "crates/nid-dsl" }
nid-storage = { path = "crates/nid-storage" }
nid-hooks = { path = "crates/nid-hooks" }
nid-fidelity = { path = "crates/nid-fidelity" }
nid-synthesis = { path = "crates/nid-synthesis" }
nid-profiles = { path = "crates/nid-profiles" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
