[package]
name = "nid-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Build-and-install the release-maintainer helpers (`nid-package` packs and
# signs `.nidrel` release tarballs; `nid-keygen` mints ed25519 signing keys).
# End users don't need these; they're used by the release workflow and
# anyone cutting their own signed builds.
release-tools = []

[[bin]]
name = "nid"
path = "src/main.rs"

[[bin]]
name = "nid-package"
path = "src/bin/nid-package.rs"
required-features = ["release-tools"]

[[bin]]
name = "nid-keygen"
path = "src/bin/nid-keygen.rs"
required-features = ["release-tools"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

nid-core.workspace = true
nid-dsl.workspace = true
nid-storage.workspace = true
nid-hooks.workspace = true
nid-fidelity.workspace = true
nid-synthesis.workspace = true
nid-profiles.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
regex.workspace = true
sha2.workspace = true
tar.workspace = true
reqwest.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
tar.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
