[package]
name = "nid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2.workspace = true
tracing.workspace = true
rand.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
