[package]
name = "nid-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
similar.workspace = true
tracing.workspace = true
nid-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
