[package]
name = "nid-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
directories.workspace = true
regex.workspace = true

nid-core.workspace = true
nid-storage.workspace = true

[dev-dependencies]
tempfile.workspace = true
