[package]
name = "nid-profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
nid-dsl.workspace = true

[build-dependencies]
walkdir = "2"
