[package]
name = "nid-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
sha2.workspace = true
zstd.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
hex.workspace = true

nid-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
