[package]
name = "nid-synthesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true

nid-core.workspace = true
nid-dsl.workspace = true
nid-storage.workspace = true

[dev-dependencies]
tempfile.workspace = true
